# GTSAM-tutorial

./: .gitignore  CMakeLists.txt  README.md  docker_run.sh  gtsam_factor_graph.cpp  gtsam_factor_graph.hpp  gtsam_slam_tutorial.cpp  result_2d.txt  visualize_sfm.py
Dockerfile/: Dockerfile.gtsam
result/: poses_initial.txt  poses_optimized.txt  sfm_result.txt  sfm_result_initial.txt  sfm_result_optimized.txt
scripts/: visualize_poses.py  visualize_sfm.py  visualize_sfm_comparison.py
src/: SFMdata.h  gtsam_factor_graph.cpp  sfm_example.cpp
